# cc-swap

./: README.md  codex-manual-markdown  pyproject.toml
src/claude_swap/: __init__.py  autoswitch.py  cli.py  codex.py  codex_autoswitch.py  codex_usage.py  json_output.py  menubar.py  models.py  oauth.py  process_detection.py  settings.py  switcher.py  transfer.py  tui.py  update_check.py  usage_store.py
src/claude_swap/tui/: app.py  autoview.py  dashboard.py  widgets.py
tests/: test_autoswitch.py  test_cli.py  test_codex.py  test_codex_autoswitch.py  test_codex_usage.py  test_json_output.py  test_menubar.py  test_oauth.py  test_switcher.py  test_transfer.py  test_tui.py  test_update_check.py
