[project]
name = "ccswap"
version = "0.21.0"
description = "Claude Codex Swap — multi-account and usage manager for Claude Code and OpenAI Codex"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keyring>=25.0.0",
    "textual>=8.2.8,<9",
    "truststore>=0.10.4",
]
authors = [
    {name = "Ehsanur Rahman Rhythm", email = "errhythm.me@gmail.com"},
    {name = "Onur Cetinkol", email = "onurcetinkol@gmail.com"},
]
license = {text = "MIT"}
keywords = ["claude", "claude-code", "codex", "openai", "account-switcher", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
]

[project.optional-dependencies]
menubar = ["rumps>=0.4.0"]

[project.urls]
Homepage = "https://github.com/errhythm/cc-swap"
Repository = "https://github.com/errhythm/cc-swap"
Issues = "https://github.com/errhythm/cc-swap/issues"
PyPI = "https://pypi.org/project/ccswap/"
Upstream = "https://github.com/realiti4/claude-swap"

[project.scripts]
ccswap = "claude_swap.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_swap"]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_default_fixture_loop_scope = "function"
markers = [
    "no_keychain_fake: opt out of the autouse in-memory Keychain guard (test mocks subprocess itself, or runs against a temp keychain on GitHub Actions)",
]
